--- a/style.css
+++ b/style.css
@@ -54,6 +54,20 @@ html {
     text-align: left;
 }
 
+.cv-button {
+    background-color: #9b4819; 
+    color: #ffffff;            
+    width: 150px;              
+    height: 50px;             
+    border-radius: 10px;        
+    cursor: pointer;           
+    display: inline-flex;      
+    justify-content: center;   
+    align-items: center;       
+    font-size: 16px;           
+    text-decoration: none;     
+}
+
 .about img {
     width: 200px;
     border-radius: 20px;
